# adventofcode2021

./: .gitignore  Cargo.toml  README.md  prepare.fish
src/: lib.rs  prelude.rs
