[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit = "0.1.1"
bitflags = "1.3.2"
geo = "0.18.0"
itertools = "0.10.1"
line_intersection = "0.4.0"
nom = "7.1.0"
petgraph = "0.6.0"
rayon = "1.5.1"

[features]
